# currency_exchange_FastAPI

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_02_17_2234-d5ce1cd33541_tables_creation.py  2024_02_19_1836-99914a7ba6dc_set_unique_code.py  2024_02_23_1547-371d1d72a3ba_tables_creation.py  2024_02_23_2114-1898d75792ec_add_unique_constraint.py  2024_02_26_1531-1ed27c661017_add_name_for_unique_constraint.py
src/: __init__.py  currencies_views.py  exchange_rates_views.py  main.py
src/controller/: __init__.py  currencies_views.py  exchange_rates_controller.py  exchange_rates_views.py  exchange_view.py
src/dao/: DAO_currency_repository.py  DAO_exchange_repository.py  __init__.py
src/dto/: __init__.py  currency_dto.py  error_response.py  exchange_dto.py  exchange_rate_dto.py
src/dto_response/: __init__.py  exchange_response.py
src/exception/: __init__.py  custom_exception.py
src/model/: .env  ENV.py  __init__.py  base.py  config.py  database.py  insert_data_for_db.py  models.py
src/model/static/: currencies.txt  exchangerates.txt
src/schema/: __init__.py  schemas.py
src/service/: __init__.py  currency_service.py  exchange_rate_service.py  exchange_sevrice.py
src/view/: __init__.py  currencies_views.py  exchange_rates_views.py  exchange_view.py
