[tool.poetry]
name = "currency-exchange"
version = "0.1.0"
description = ""
authors = ["Victor Smirnov <csatom@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
python-multipart = "^0.0.9"
sqlalchemy = {extras = ["all"], version = "^2.0.27"}
asyncpg = "^0.29.0"
pydantic = "^2.6.1"
pydantic-settings = "^2.2.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
